<resources>
    <string name="app_name">yourcloset</string>
    <string name="insertecodigo">Inserte Teléfono</string>
    <string name="numerotel">Número de teléfono</string>
    <string name="advertenciatarifa">Es posible que reciba un mensaje SMS para la verificación y que se apliquen las tarifas estándar</string>
    <string name="obtengacodigo">Obtenga código</string>
    <string name="codigo">Código de verificación</string>
    <string name="ingresecodigo">Ingrese código</string>
    <string name="confirmacodigo">Confirma código</string>
    <string name="inserteemail">Inserte email</string>
    <string name="email">Email</string>
    <string name="insertecontrasena">Inserte Contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmecontrasena">Confirme la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresonumero"> <u>Ingresa con número de teléfono</u></string>
    <string name="tingresonumero"> Ingresa con número de teléfono</string>
    <string name="tlogintelefono"> Login teléfono</string>
    <string name="estasregistrado">¿Ya estás registrado? </string>
    <string name="iniciasesion"><u>Iniciar Sesión</u></string>
    <string name="biniciasesion">Iniciar Sesión</string>
    <string name="creacuenta">Crea tu cuenta</string>
    <string name="lcreacuenta"><u>Crea tu cuenta</u></string>
    <string name="home">Home</string>
    <string name="producto">Productos</string>
    <string name="comentarios">Comentarios</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="ingrese_codigo_barras">Ingrese el código de barras aquí</string>
    <string name="apunte_su_camara">Apunte su cámara al código de barras</string>
    <string name="ubicacion_cercana">Ubicación más cercana</string>
    <string name="tiniciasesion">¡Inicia sesión en tu cuenta!</string>
    <string name="x">X</string>
    <string name="nombreproducto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="talla">Talla de la prenda</string>
    <string name="material">Material de la prenda</string>
    <string name="descripcion">Descripción</string>
    <string name="detallesproducto">Detalles del producto:</string>
    <string name="signomenos">-</string>
    <string name="signomas">+</string>
    <string name="talla2">Talla:</string>
    <string name="color">Color:</string>
    <string name="colorprenda">Color de la prenda</string>
    <string name="unidadesdisponibles">Unidades disponibles:</string>
    <string name="btncomprar">COMPRAR</string>
    <string name="siguenos">Síguenos</string>
    <string name="encuentranos">Encuéntranos</string>
    <string name="escanea">Escanea</string>
    <string name="catalogo">Catálogo</string>
    <string name="title_resumen">Resumen de su compra</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="nombre">Nombre:</string>
    <string name="pedido_numer">Pedido No.</string>
    <string name="exit">Salir</string>
    <string name="numeroprecio">$ "%d"</string>
    <string name="numeroinventario">"%d"</string>
    <string name="detalles">"Detalle del Producto"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>